# promptly

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
qa-chatbot/: .dockerignore  .env.example  .env.production.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  run.sh  stash_dump.patch
qa-chatbot/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
qa-chatbot/.github/workflows/: cd.yml  ci.yml  security.yml
qa-chatbot/docker/nginx/: nginx.conf
qa-chatbot/prompts/: council_optimizer.md  council_optimizer_analytical.md  council_optimizer_concise.md  council_optimizer_creative.md  council_optimizer_structured.md  critic.md  favorite_auto_tag.md  intent_classifier.md  prompt_advisory.md  prompt_health_score.md  synthesize_best.md
qa-chatbot/scripts/: entrypoint.sh
qa-chatbot/src/app/: dependencies.py  main.py
qa-chatbot/src/app/api/: deps.py  router.py
qa-chatbot/src/app/config/: app.py  auth.py  clerk.py  database.py  env.py  llm.py  rate_limit.py  redis.py
qa-chatbot/src/app/core/: cache.py  clerk.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py  supabase_auth.py  user_context.py
qa-chatbot/src/app/db/: redis.py  session.py
qa-chatbot/src/app/domain_prompt/: cache.py  dataset_builder.py  exceptions.py  models.py  optimizer.py  repository.py  router.py  schemas.py  storage.py  tasks.py
qa-chatbot/src/app/graph/: builder.py  checkpointer.py  prompts.py  state.py
qa-chatbot/src/app/llm/: __init__.py  _client.py  analysis.py  dataset.py  naming.py  optimizer.py  pipeline.py  prompt_bridge.py  settings.py  tagging.py
qa-chatbot/src/app/migrations/: env.py
qa-chatbot/src/app/models/: __init__.py  api_key.py  base.py  favorite_prompt.py  message.py  session.py  usage_event.py  user.py
qa-chatbot/src/app/prompt_bridge/: __init__.py
qa-chatbot/src/app/repositories/: api_key_repo.py  base.py  favorite_repo.py  health_score_repo.py  message_repo.py  prompt_category_repo.py  prompt_version_repo.py  session_repo.py  template_repo.py  usage_event_repo.py  user_repo.py
qa-chatbot/src/app/schemas/: api_key.py  auth.py  chat.py  favorite.py  health.py  org.py  prompt.py  stats.py  template.py  user.py
qa-chatbot/src/app/seeds/: templates.py
qa-chatbot/src/app/services/: category_service.py  chat_service.py  favorite_service.py  prompt_service.py
qa-chatbot/src/app/utils/: log.py
qa-chatbot/src/app/workers/: celery_app.py  tasks.py
qa-chatbot/src/promptly/: dependencies.py  main.py
qa-chatbot/src/promptly/api/: router.py
qa-chatbot/src/promptly/config/: app.py  llm.py  rate_limit.py  redis.py  supabase.py
qa-chatbot/src/promptly/core/: api_key_utils.py  cache.py  exceptions.py  middleware.py  rate_limit.py  supabase_auth.py  user_context.py
qa-chatbot/src/promptly/db/: redis.py  session.py
qa-chatbot/src/promptly/graph/: builder.py  checkpointer.py  state.py
qa-chatbot/src/promptly/llm/: __init__.py  _client.py  analysis.py  dataset.py  naming.py  optimizer.py  pipeline.py  prompt_bridge.py  settings.py  tagging.py  tiers.py
qa-chatbot/src/promptly/migrations/: env.py
qa-chatbot/src/promptly/models/: __init__.py  admin_audit_log.py  api_key.py  api_request_log.py  health_score.py  message.py  prompt_category.py  prompt_version.py  template.py  user.py
qa-chatbot/src/promptly/repositories/: base.py  (+10 more)
qa-chatbot/tests/: conftest.py
qa-chatbot/tests/integration/: conftest.py
qa-chatbot/tests/unit/: conftest.py  test_admin_analytics.py  test_admin_schemas.py  test_api_key_schemas.py  test_cache.py  test_chat_schemas.py  test_clerk_core.py  test_core_exceptions.py  test_dependencies.py  test_diff_utils.py  test_favorite_prompt_model.py  test_favorite_schemas.py  test_favorite_service.py  test_openrouter_helpers.py  test_prompt_service.py  test_require_admin.py  test_supabase_auth.py  test_usage_event_repo.py  test_webhooks.py
(+477 files in other folders)
