[project]
name = "qa-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.34.0",
    "certifi>=2024.2.2",
    "celery[redis]>=5.3.1",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pgvector>=0.4.2",
    "pypdf>=4.0.0",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "PyJWT[crypto]>=2.13.0",
    "tenacity>=9.1.4",
    "sentry-sdk[fastapi]>=2.0.0",
    "uvicorn[standard]>=0.43.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptly"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are fine for **kwargs, graph, etc.
    "B008",    # Depends() in function defaults is standard FastAPI pattern
    "S106",    # False positive on token_type="bearer"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "N802"]
"src/promptly/graph/prompts/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
]
